--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -15,7 +15,12 @@ jobs:
         with:
           channel: stable
           version: 3.0.2
-
+      - name: create default flutter project
+        run: flutter create example
+        
+      - name: enter directory
+        run: cd example
+        
       - name: Install dependencies
         run: flutter pub get
 
