--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -17,9 +17,21 @@ jobs:
           version: 3.0.2
       - name: create default flutter project
         run: flutter create example
+      
+      - name: print working dir
+        run: pwd
+      
+      - name: list directory
+        run: ls
         
       - name: enter directory
         run: cd example
+
+      - name: print working dir
+        run: pwd
+      
+      - name: list directory
+        run: ls
         
       - name: Install dependencies
         run: flutter pub get
